Trying out extenal collection

--- a/example/index.html
+++ b/example/index.html
@@ -2,4 +2,5 @@
   <p>Hello world</p>
   <script src="app.js"></script>
   <script src="happy_number.js"></script>
+  <script src="fly.js"></script>
 </body>
